# rulethecity

./: .gitignore  CMakeLists.txt
asset/shader/: 2d_texture.frag  filled_circle.frag  filled_circle.vert  filled_quad.vert
src/: main.cpp
src/renderer/: Frontend.cpp  Frontend.h  RenderBatch.cpp  RenderBatch.h  RenderUtil.h  Renderer.cpp  Renderer.h  Screen.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  ShapeGenerator.h  Texture.cpp  Texture.h
